 - GBA DMA: Fix invalid DMA reads (fixes mgba.io/i/142)
 - GBA Video: Add delay when enabling BGs (fixes mgba.io/i/744, mgba.io/i/752)
 - GB Timer: Minor accuracy improvements
 - GB Audio: Clock frame events on DIV
 - GBA Timer: Fix timers sometimes being late (fixes mgba.io/i/1012)
 - GBA Hardware: Fix RTC overriding light sensor (fixes mgba.io/i/1069)
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only
 - Qt: Redo GameController into multiple classes
 - Test: Restructure test suite into multiple executables
 - Python: Integrate tests from cinema test suite
 - Util: Don't build crc32 if the function already exists
 - GBA: Implement display start DMAs
 - Qt: Prevent window from being created off-screen
 - Qt: Add option to disable FPS display
 - GBA: Improve multiboot image detection
 - GB MBC: Remove erroneous bank 0 wrapping
 - GBA Cheats: Allow multiple ROM patches in the same slot
 - GB: Skip BIOS option now works
 - Libretro: Add frameskip option
 - GBA Memory: 64 MiB GBA Video cartridge support
 - PSP2: Use system enter key by default
 - 3DS: Remove deprecated CSND interface
 - Qt: Options to mess around with layer placement

0.6.3: (2017-04-14)
Bugfixes:
 - GB Audio: Revert unsigned audio changes
 - GB Video: Fix bad merge (fixes mgba.io/i/1040)
 - GBA Video: Fix OBJ blending regression (fixes mgba.io/i/1037)

0.6.2: (2017-04-03)
Bugfixes:
 - Core: Fix ROM patches not being unloaded when disabled (fixes mgba.io/i/962)
 - 3DS: Fix opening files in directory names with trailing slashes
 - LR35902: Fix watchpoints not reporting new value
 - GB MBC: Fix MBC2 saves (fixes mgba.io/i/954)
 - GB Memory: HDMAs should not start when LCD is off (fixes mgba.io/i/310)
 - GB Memory: Fix OAM DMA blocking regions (fixes mgba.io/i/1013)
 - GB Video: Only trigger STAT write IRQs when screen is on (fixes mgba.io/i/912)