@@ -516,12 +516,14 @@ void GBASavedataClean(struct GBASavedata* savedata, uint32_t frameCount) {
 		if (savedata->maskWriteback) {
 			GBASavedataUnmask(savedata);
 		}
-		size_t size = GBASavedataSize(savedata);
-		savedata->dirty = 0;
-		if (savedata->data && savedata->vf->sync(savedata->vf, savedata->data, size)) {
-			mLOG(GBA_SAVE, INFO, "Savedata synced");
-		} else {
-			mLOG(GBA_SAVE, INFO, "Savedata failed to sync!");
+		if (savedata->mapMode & MAP_WRITE) {
+			size_t size = GBASavedataSize(savedata);
+			savedata->dirty = 0;
+			if (savedata->data && savedata->vf->sync(savedata->vf, savedata->data, size)) {
+				mLOG(GBA_SAVE, INFO, "Savedata synced");
+			} else {
+				mLOG(GBA_SAVE, INFO, "Savedata failed to sync!");
+			}
 		}
 	}
 }
